--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@angular/animations": "^15.0.0",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
+    "@angular/core": "^15.2.9",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngrx/effects": "^15.0.0",
+    "@ngrx/entity": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
     "ng-lazyload-image": "^9.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
