--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@angular/platform-browser": "^16.0.4",
 		"@angular/platform-browser-dynamic": "^16.0.4",
 		"@angular/router": "^16.0.4",
+		"@ckeditor/ckeditor5-angular": "^6.0.1",
+		"@ckeditor/ckeditor5-build-classic": "^38.0.1",
 		"@ngrx/effects": "^16.0.0",
 		"@ngrx/entity": "^16.0.0",
 		"@ngrx/store": "^16.0.0",
