--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@ngrx/store": "^16.0.0",
 		"@ngrx/store-devtools": "^16.0.0",
 		"ng-lazyload-image": "^9.1.3",
+		"ngx-pagination": "^6.0.3",
 		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.13.0"
