--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
 	"private": true,
 	"dependencies": {
 		"@angular/animations": "^16.0.4",
-		"@angular/cdk": "^16.1.3",
 		"@angular/common": "^16.0.4",
 		"@angular/compiler": "^16.0.4",
 		"@angular/core": "^16.0.4",
 		"@angular/forms": "^16.0.4",
-		"@angular/material": "^16.1.3",
 		"@angular/platform-browser": "^16.0.4",
 		"@angular/platform-browser-dynamic": "^16.0.4",
 		"@angular/router": "^16.0.4",
-		"@ckeditor/ckeditor5-angular": "^6.0.1",
-		"@ckeditor/ckeditor5-build-classic": "^38.0.1",
 		"@ngrx/effects": "^16.0.0",
 		"@ngrx/entity": "^16.0.0",
 		"@ngrx/store": "^16.0.0",
@@ -35,7 +31,7 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^16.0.4",
-		"@angular/cli": "~16.0.4",
+		"@angular/cli": "^16.1.4",
 		"@angular/compiler-cli": "^16.0.4",
 		"@types/jasmine": "~4.3.0",
 		"autoprefixer": "^10.4.14",
