--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"ng-lazyload-image": "^9.1.3",
 		"ngx-cookie-service": "^16.0.0",
 		"ngx-pagination": "^6.0.3",
+		"primeicons": "^6.0.1",
+		"primeng": "^16.0.2",
 		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.13.0"
