--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@ngrx/entity": "^16.0.0",
 		"@ngrx/store": "^16.0.0",
 		"@ngrx/store-devtools": "^16.0.0",
+		"@ngx-translate/core": "^15.0.0",
+		"@ngx-translate/http-loader": "^8.0.0",
 		"ng-lazyload-image": "^9.1.3",
 		"ngx-cookie-service": "^16.0.0",
 		"ngx-pagination": "^6.0.3",
