--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"primeicons": "^6.0.1",
 		"primeng": "^16.0.2",
 		"quill": "^1.3.7",
-		"rxjs": "~7.5.0",
+		"rxjs": "^7.8.1",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.13.0"
 	},
